# vector-editor

./: CMakeLists.txt  CanvasExporter.h  CursorEditor.cpp  CursorEditor.h  ImageEdior.qml  ImageEditor.qml  ImageScene.qml  ImageZoomer.qml  MySingleton.qml  Panel.qml  README.md  ScrollView.qml  _PainterText.qml  main.cpp  main.qml  qml.qrc  zoomer.cpp  zoomer.h
data/: AbstarctCoordinate.cpp  AbstarctCoordinate.h  ItemCoordinate.cpp  ItemCoordinate.h  TextCoordinate.cpp  TextCoordinate.h
frame/: BaseFrame.qml  EditableFrame.qml  HoverFrame.qml
helper/: UuidHelper.cpp  UuidHelper.h
javascript/: element-math.js  math.js  painter.js
painter/: ItemPainter.qml  TextPainter.qml
scence-mouse-area/: BaseMouseArea.qml  OvalMouseArea.qml  RectangleMouseArea.qml  ScenceMouseArea.qml  SelectableMouseArea.qml  TextMouseArea.qml
